It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Mon, May 4, 2009
---------------------------------------------------------------------
- Last bit of paging refactoring before closing LH #18.

Sun, May 3, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Opportunities.
- Simplified paging by using single proxy to store and retrieve current page.

Sat, May 2, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Contacts.

Fri, May 1, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Campaigns.

Thu, Apr 30, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Accounts.

Wed, Apr 29, 2009
---------------------------------------------------------------------
- Implemented Ajax pagination for Leads.

Tue, Apr 28, 2009
---------------------------------------------------------------------
- Started to explore alternative approach to pagination (see Leads).

Mon, Apr 27, 2009
---------------------------------------------------------------------
- Initial implementation of on demand paging (Accounts only so far).
- Fixed SQLite incompatibilities (thanks, James!)
- Restructured pagination templates and added specs.

Sun, Apr 26, 2009
---------------------------------------------------------------------
- Researched on demand paginations, and [will_paginate].

Sat, Apr 25, 2009
---------------------------------------------------------------------
- Installed [will_paginate] plugin.

Fri, Apr 24, 2009
---------------------------------------------------------------------
- Happy birthday -- we're 5 month old ;-)
- Make sure tasks don't get onto recently viewed items list.