@@ -8,13 +8,13 @@
   :border-bottom 1px gray solid
   :color = !color_title
   :font
-    :size 16px
+    :size 17px
     :weight bold
-  :padding-bottom 3px
+  :padding-bottom 2px
 
   img
-    float left
-    margin 0px 10px 0px 0px
+    :position relative
+    :top 2px
 
 .title_tools
   :font-size 12px
@@ -232,7 +232,7 @@
   :font-size 10px
   :margin 4px 0px 0px 0px
 
-#loading
+#paging
   :float right
   :margin 7px 5px 0px 0px
 
@@ -333,6 +333,7 @@
       :font-size 11px
     &.last
       :border-bottom none
+
   .caption
     :border-bottom 1px grey solid
     :color navy
@@ -341,6 +342,14 @@
       :weight bold
     :margin 4px 0px 2px 0px
     :padding 2px 0px 2px 0px
+
+  .field
+    :color navy
+    :float left
+    :font
+      :size 12px
+      :weight bold
+    :height 16px
 
 .selector
   :color black
