@@ -1,2 +1,2 @@
 = will_paginate
-#loading{ hidden }= image_tag("loading.gif", :size => "16x16")
+#paging{ hidden }= image_tag("loading.gif", :size => "16x16")
