@@ -1,3 +1,4 @@
+= render :partial => "common/search"
 .filters#filters
   - Setting.invert(:lead_status).each do |key, value|
     .check_box{:style => "border-bottom: 1px silver dotted;"}
