@@ -1,0 +1,5 @@
+unless @leads.blank?
+  page[:leads].replace_html render(:partial => "lead", :collection => @leads)
+else
+  page[:leads].replace_html "Cound't find #{h @query}" # STUB.
+end
