@@ -10,7 +10,7 @@ ActionController::Routing::Routes.draw do |map|
   map.resources :tasks,         :has_many => :comments, :member => { :complete => :put }
   map.resources :accounts,      :has_many => :comments
   map.resources :campaigns,     :has_many => :comments
-  map.resources :leads,         :has_many => :comments, :member => { :convert => :get, :promote => :put }
+  map.resources :leads,         :has_many => :comments, :collection => { :search => :get }, :member => { :convert => :get, :promote => :put }
   map.resources :contacts,      :has_many => :comments
   map.resources :opportunities, :has_many => :comments
 
